--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,12 @@
 language: python
+python:
+  - "3.6"
 
-install: pip install -r requirements.txt
+install:
+  - pip install -r requirements.txt
+  - pip install pytest
 
-script: pytest
+jobs:
+  include:
+    - stage: test
+      script: pytest
